fix(ds): fixing the diff-sync implementation

--- a/demo/client/index.html
+++ b/demo/client/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+    <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -7,7 +7,7 @@
         <link type="image/x-icon" href="./favicon.png" rel="icon" />
         <script src="libraries/cursor-saver.js"></script>
         <script src="index.js"></script>
-        <script src="../../src/index.js"></script>
+        <script src="diff-sync/index.js"></script>
     </head>
 
     <body>
